mengubah warna class hero bagian atas dari warna hijau menjadi coklat

--- a/gg.css
+++ b/gg.css
@@ -94,7 +94,7 @@ body {
 	height: 400px;
 	background-image: url(kopi.jpg);
 	background-position: 0px -470px;
-	border-top: 5px solid #32CD32;
+	border-top: 5px solid chocolate;
 	border-bottom: 5px solid chocolate;
 }
 .text h1 {
